--- a/views/resume.haml
+++ b/views/resume.haml
@@ -7,7 +7,8 @@
     %article
       %header
         %h1= @name || '[name]'
-        %p= @street || '[street]'
+        - if @street
+          %p= @street
         %p= (@city || '[city]')+', '+(@state || '[state]')
         %p
           - (@email||'[email]').tap do |email|
