Restrict width and fix haml issue

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,10 @@ body {
   font-size: 75%;
 }
 
+article {
+  max-width: 600px;
+}
+
 h1, h2, h3, h4, h5, h6, header, hgroup {
   line-height: 30%;
 }
