Clean up position presentation a bit

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -25,7 +25,7 @@
         - @jobs.each do |position, date, company, description|
           %section
             %hgroup
-              %h3= "#{date} #{position}"
+              %h3= "#{date} - #{position}"
               %h4= company
             = description
       %section
