--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,3 @@
-section, article, aside, header, hgroup, footer, nav, dialog, figure, h1, h2, h3, h4, h5, h6
-{
-  display: block;
-}
-
-ul {
-  margin: 0;
-}
 
 body {
   background-color: #FFFFFD;
@@ -13,38 +5,19 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-article {
+.container {
   max-width: 800px;
 }
 
-h1, h2, h3, h4, h5, h6, header, hgroup {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-h1 {
-  font-size: 1.5em;
-  font-style: italic;
-  font-weight: bold;
-}
-
-article header {
-  margin-bottom: 20px;
+header {
+  margin-bottom: 10px;
 }
 
 section {
   margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-section.topic {
-
+  margin-bottom: 15px;
 }
 
 footer {
   margin-top: 40px;
-}
-
-hgroup {
-  margin-bottom: 10px;
 }
