--- a/views/resume.haml
+++ b/views/resume.haml
@@ -1,55 +1,70 @@
 !!! 5
 %html
   %head
+    %meta(charset="utf-8")
+    %meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    %meta(name="viewport" content="width=device-width, initial-scale=1")
+
     %title= @resume.title || '[title]'
+    %link(rel='stylesheet' type='text/css' href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous")
     %link(rel='stylesheet' type='text/css' href='style.css')
   %body
-    %article
-      %header
-        %h1= @resume.name || '[name]'
-        - if @resume.street
-          %p= @resume.street
-        %p= (@resume.city || '[city]')+', '+(@resume.state || '[state]')
-        %p
-          - (@resume.email||'[email]').tap do |email|
-            %a(href="mailto:#{email}")= email
-        - if @resume.github_link
-          %p
-            %a{:href=>@resume.github_link}= @resume.github_link
+    .container
+      %header.text-center
+        %h2= @resume.name || '[name]'
+        .row
+          .col
+            %ul.list-unstyled
+              - if @resume.street
+                %li= @resume.street
+              %li= (@resume.city || '[city]')+', '+(@resume.state || '[state]')
+          .col
+            %p
+              - (@resume.email||'[email]').tap do |email|
+                %a(href="mailto:#{email}")= email
+          - if @resume.github_link
+            .col
+              %p
+                %a{:href=>@resume.github_link}= @resume.github_link
       - @resume.misc_sections.each do |heading, lis|
         %section.topic
-          %h2= heading
+          %header
+            %h3= heading
           %ul
             - lis.each do |li|
               %li= li
       %section.topic
-        %h2 Employment History
+        %header
+          %h3 Employment History
         - @resume.jobs.each do |position, date, company, description|
           %section
-            %hgroup
-              %h3= "#{date} - #{position}"
-              %h4= company
+            %header
+              %h4= "#{date} - #{position}"
+              %h5= company
             %ul
               - [description].flatten.each do |desc|
                 %li= desc
       - if @resume.personal_projects.any?
         %section.topic
-          %h2 Personal Projects
+          %header
+            %h3 Personal Projects
           - @resume.personal_projects.each do |title, link, description|
             %section
-              %hgroup
-                %h3= title
+              %header
+                %h4= title
                 - if link
-                  %h4
+                  %h5
                     %a{href: link}= link
               %ul
                 - [description].flatten.each do |desc|
                   %li= desc
       %section.topic
-        %h2 Education
+        %header
+          %h3 Education
         - @resume.schools.each do |degree, date, school|
           %section
-            %h3= "#{degree}, #{date}"
+            %header
+              %h4= "#{degree}, #{date}"
             = school
       %footer
         - @resume.footer_links.each do |url, description|
